--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@ body {
 }
 
 .jumbotron {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   height: 30em;
   background-image: url(assets/images/rifle.webp);
   background-size: cover;
@@ -36,6 +32,16 @@ body {
 .jumbotron h3 {
   font-size: 2.5rem;
   text-shadow: 4px 4px 9px rgba(184, 65, 61, 0.596);
+}
+
+#welcome {
+  height: 500px;
+  background: rgba(66, 63, 63, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
 }
 
 #AboutUsIntro {
@@ -108,18 +114,34 @@ body {
 -------------------------------------------------- */
 
 /* Center align the text within the three columns below the carousel */
-.marketing .col-md-6 {
+.marketing .col-md-5 {
+  display: flex;
+  width: 90%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 4rem;
   margin-top: 4rem;
+  margin-left: 2%;
+  margin-right: 2%;
   text-align: center;
   background: white;
+  border-radius: 25px;
+  -webkit-box-shadow: 0px 0px 50px 35px rgba(255,255,255,0.62);
+  -moz-box-shadow: 0px 0px 50px 35px rgba(255,255,255,0.62);
+  box-shadow: 0px 0px 50px 35px rgba(255,255,255,0.62);
 }
 .marketing h2 {
   font-weight: 400;
 }
-.marketing .col-md-6 p {
+.marketing .col-md-5 p {
   margin-right: .75rem;
   margin-left: .75rem;
+}
+
+.img {
+  max-width: 100%;
+  height: auto;
 }
 
 /* Featurettes
@@ -184,7 +206,7 @@ body {
   display: none;
   }
 
-  .featurette .col-md-6 {
+  .featurette .col-md-5 {
   margin-bottom: 1.5rem;
   margin-top: 1.5rem;
   }
@@ -199,6 +221,10 @@ body {
 
   .socialmedia {
     justify-content: space-between;
+  }
+
+  .row {
+    margin-left: auto;
   }
 }
 
