--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ body {
 .lead {
   border: solid 2px black;
   padding: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 #FAQ {
@@ -102,8 +104,8 @@ body {
 }
 
 .content {
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -116,14 +118,18 @@ body {
 -------------------------------------------------- */
 
 /* Center align the text within the three columns below the carousel */
+.marketing {
+  align-items: center;
+}
+
 .marketing .col-md-5 {
   display: flex;
-  width: 90%;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-bottom: 4rem;
-  margin-top: 4rem;
+  margin-top: 2rem;
   margin-left: 2%;
   margin-right: 2%;
   text-align: center;
@@ -181,7 +187,7 @@ body {
 @media (max-width: 500px) {
   #events {
     text-align: center;
-    margin-top: 1rem;
+   /*  margin-top: 1rem; */
   }
 
   #FAQ h1 {
@@ -192,13 +198,14 @@ body {
   display: none;
   }
 
-  .featurette .col-md-5 {
+  /* .featurette .col-md-5 {
   margin-bottom: 1.5rem;
   margin-top: 1.5rem;
-  }
+  } */
 
   .featurette-divider {
   margin: 0;
+  display: none;
   }
 
   .featurette-heading {
@@ -211,6 +218,7 @@ body {
 
   .row {
     margin-left: auto;
+    margin-right: auto;
   }
 
  /*  #welcome {
@@ -229,39 +237,6 @@ body {
   bottom: 0;
   width: 100%;
   margin-top: 50px;
-}
-
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-/* Carousel base class */
-.carousel {
-  margin-bottom: 4rem;
-}
-
-/* Declare heights because of positioning of img element */
-.carousel-item {
-  height: 16rem;
-}
-
-.corousel-inner img {
-  width: 100%;
-  height: 100%;
-}
-
-.carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 100%;
-}
-
-/* Carousel bacgkround color */
-.carousel-inner {
-    background: #6D6027;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #D3CBB8, #6D6027);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #D3CBB8, #6D6027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 /* Font Awesome */
