--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  margin: auto;
   align-items: center;
   justify-content: center;
 }
@@ -185,9 +184,11 @@ body {
 }
 
 @media (max-width: 500px) {
+  .jumbotron {
+    background-image: url(assets/images/rifle2.webp);
+  }
   #events {
     text-align: center;
-   /*  margin-top: 1rem; */
   }
 
   #FAQ h1 {
@@ -197,11 +198,6 @@ body {
   #FAQ h2 {
   display: none;
   }
-
-  /* .featurette .col-md-5 {
-  margin-bottom: 1.5rem;
-  margin-top: 1.5rem;
-  } */
 
   .featurette-divider {
   margin: 0;
@@ -220,10 +216,6 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
-
- /*  #welcome {
-  height: 22.5rem;
-  } */
 }
 
 #events ul {
