--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ body {
 }
 
 .jumbotron {
-  height: 50vw;
+  height: 100%;
   background-image: url(assets/images/rifle.webp);
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   align-items: center;
   justify-content: center;
 }
