--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   height: 100%;
   background-image: url(assets/images/rifle.webp);
   background-size: cover;
+  background-attachment: fixed;
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
