--- a/style.css
+++ b/style.css
@@ -185,7 +185,9 @@ body {
 
 @media (max-width: 480px) {
   .jumbotron {
-    background-image: url(assets/images/rifle2.webp) !important;
+    background: #6D6027;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #D3CBB8, #6D6027);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #D3CBB8, #6D6027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   }
   #events {
     text-align: center;
